--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
     <div class="headerMenu">
         <div class="logo">
             <h1>Todo FP</h1>
@@ -28,39 +29,36 @@
         <div class="cornerLine"></div>
         <div class="cajaSecundaria">
             <div id="menuLeft">
-                <!-- seguimos por aquí -->
-                <div class="subtitu sombraD">
-                    &Aacute;REA DE USUARIOS
+                <div class="tittleBox">
+                    ÁREA DE USUARIOS
                 </div>
-                <div class="separa">
-                    <form method="post" action="#">
-                        ID de Usuario:
-                        <input id="nombre" name="nombre" type="text" />
-                        Contrase&ntilde;a:
-                        <input id="paso" name="paso" type="password" />
-                        <input id="acceder" name="Acceder" type="submit" />
-                    </form>
-                    <a href="">Olvidate la contrase&ntilde;a</a>
+                <div class="usuariosContent">
+                    ID de Usuario:
+                    <input id="name" type="text" />
+                    Contraseña:
+                    <input id="password" type="text" />
+                    <button id="to access" type="button">Acceder</button>
+                    <br /><br />
+                    <a href="">¿Olvidaste la contraseña?</a>
                     <br /><br />
                 </div>
-                <div class="subtitu sombraD">
+                <div class="tittleBox">
                     UNIDADES DE TRABAJO
                 </div>
-                <dl>
-                    <dt>DIW01, 2011</dt>
-                    <dd><a href="">Planificaci&oacute;n de interfaces gr&aacute;ficas...</a></dd>
-                    <dt>DIW02, 2011</dt>
-                    <dd><a href="">Accesibilidad en la web...</a></dd>
-                    <dt>DIW03, 2011</dt>
-                    <dd><a href="">Usabilidad en la web...</a></dd>
-                    <dt>DIW04, 2011</dt>
-                    <dd><a href="">Hojas de estilos...</a></dd>
-                    <dt>DIW05, 2011</dt>
-                    <dd><a href="">Contenidos multimedia en la web: im&aacute;genes...</a></dd>
-                </dl>
+                <p>DIW01, 2011</p>
+                <a href="">Planificación de interfaces gráficas...</a>
+                <p>DIW02, 2011</p>
+                <a href="">Accesibilidad en la web...</a>
+                <p>DIW03, 2011</p>
+                <a href="">Usabilidad en la web...</a>
+                <p>DIW04, 2011</p>
+                <a href="">Hojas de estilos...</a>
+                <p>DIW05, 2011</p>
+                <a href="">Contenidos multimedia en la web: imágenes...</a>
             </div>
+            <!-- continuamos aqui -->
             <div id="centro">
-                <div class="subtitu sombraD">
+                <div class="tittleBox">
                     &iexcl;BIENVENIDOS A TODOFP&#33;
                     <span class="fecha">Oct. 10, 2011</span>
                 </div>
@@ -76,7 +74,7 @@
                 <p class="peque">Realizado por Manuel Vieites <a href="http://www.mecd.gob.es/portada-mecd/">Todo FP</a>
                     | <a href="http://www.mecd.gob.es/educacion-mecd/">Educaci&oacute;n</a></p>
                 <br />
-                <div class="subtitu sombraD">
+                <div class="tittleBox">
                     DIW04. HOJAS DE ESTILOS.
                     <span class="fecha">Oct. 10, 2011</span>
                 </div>
@@ -101,7 +99,7 @@
                 <br />
             </div>
             <div id="derecha">
-                <div class="subtitu sombraD">
+                <div class="tittleBox">
                     WEBS DE INTER&Eacute;S
                 </div>
                 <ul id="idli">
